test/programs/valid/literals_and_names/javadoc_comments.java
/** A Javadoc comment starts with a slash and two asterisks. */

protected class A {
    public A() {}
}

