test/programs/invalid/modifiers/general_native_methods.java
  protected class A {
    public native int m();
  }

